# Data_Communication

Lab Class/: BitStuffing01  BitStuffing01.cpp  Byte stuffing  CMakeLists.txt  CRC01.cpp  Character Stuffing.cpp  Cyclic redundancy check  Distance vector routing  EncodingDecoding.cpp  IP address  IP address.cpp  Index.html  Link State Routing  README.md  Sliding Window  bitDeStuffing  bitDeStuffing.cpp  bitStuffing  bitStuffing.cpp  cRc.cpp  c_cpp_properties.json  decrypt.c  enCodeDecode.js  encodeDecodeStr.cpp  encryptDecrypt.cpp  hammingCode  hammingCode01  hammingCode01.cpp  ip4Toip6.cpp  lab_01  lab_01.c  stop&wait.cpp  tempCodeRunnerFile.cpp
Lab Class/lab report/: DC ipv4 to ipv6 (1).pptx  bus.pkt  star.pkt
Lab Class/project for data communications/project for data communications/: app.js  index.html
