cmake_minimum_required(VERSION 3.21)
project(Lab_Class)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab_Class
        bitDeStuffing.cpp
        bitStuffing.cpp
        BitStuffing01.cpp
        "Character Stuffing.cpp"
        cRc.cpp
        CRC01.cpp
        "Cyclic redundancy check.cpp"
        "Distance vector routing.cpp"
        encodeDecodeStr.cpp
        encryptDecrypt.cpp
        hammingCode.cpp
        hammingCode01.cpp
        "IP address.cpp"
        ip4Toip6.cpp
        ipconfig.cpp
        lab_01.c
        "Link State Routing.cpp"
        "Sliding Window.cpp"
        stop&wait.cpp
        tempCodeRunnerFile.cpp)
